--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.7",
     "styled-components": "^6.1.8",
     "universal-cookie": "^7.1.4",
     "uuid": "^9.0.1",
