--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "chart.js": "^4.4.2",
@@ -27,6 +28,7 @@
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.7",
     "styled-components": "^6.1.8",
