--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "chart.js": "^4.4.2",
+    "docx": "^8.5.0",
+    "docxtemplater": "^3.49.2",
     "file-saver": "^2.0.5",
+    "html-docx-js": "^0.3.1",
     "moment": "^2.30.1",
+    "pizzip": "^3.1.7",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.3",
@@ -52,6 +56,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "file-loader": "^6.2.0",
+    "html-to-docx": "^1.8.0",
     "html-webpack-plugin": "^5.6.0",
     "imagemin-webp-webpack-plugin": "^3.3.6",
     "style-loader": "^4.0.0",
